(tests
 (names node_tests peer_prop address_prop util_prop failure_detector_prop)
 (modules
  node_tests
  messages
  generators
  peer_prop
  address_prop
  commons
  util_prop
  failure_detector_prop)
 (libraries pollinate bin_prot lwt alcotest-lwt qcheck-core qcheck-alcotest)
 (preprocess
  (pps ppx_bin_prot lwt_ppx ppx_deriving.show)))
