(tests
 (names
  node_tests
  peer_prop
  address_prop
  util_prop
  failure_detector_prop
  failure_detector_tests)
 (modules
  node_tests
  messages
  generators
  peer_prop
  address_prop
  commons
  util_prop
  failure_detector_prop
  failure_detector_tests)
 (libraries pollinate qcheck-alcotest bin_prot lwt alcotest alcotest-lwt qcheck qcheck-core)
 (preprocess
  (pps ppx_bin_prot lwt_ppx ppx_deriving.show)))
