(tests
 (names
  node_tests
  gossip_tests
  disseminator_tests
  peer_prop
  address_prop
  util_prop
  failure_detector_prop
  failure_detector_tests)
 (modules
  node_tests
  gossip_tests
  disseminator_tests
  messages
  generators
  peer_prop
  address_prop
  commons
  util_prop
  failure_detector_prop
  failure_detector_tests)
 (libraries pollinate bin_prot lwt alcotest-lwt qcheck-core qcheck-alcotest)
 (preprocess
  (pps ppx_bin_prot lwt_ppx ppx_deriving.show)))
